--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="rn-service">
               <div class="inner">
                 <div class="icon">
-                  <i data-feather="book-open"></i>
+                  <i data-feather="wind"></i>
                 </div>
                 <div class="content">
                   <h4 class="title"><a href="#">Api Integration</a></h4>
@@ -447,7 +447,7 @@
             <div class="rn-service">
               <div class="inner">
                 <div class="icon">
-                  <i data-feather="tv"></i>
+                  <i data-feather="cloud"></i>
                 </div>
                 <div class="content">
                   <h4 class="title"><a href="#">Backend Development</a></h4>
@@ -817,7 +817,7 @@
               <ul class="rn-nav-list nav nav-tabs" id="myTabs" role="tablist">
                 <li class="nav-item">
                   <a
-                    class="nav-link active"
+                    class="nav-link "
                     id="education-tab"
                     data-toggle="tab"
                     href="#education"
@@ -829,7 +829,7 @@
                 </li>
                 <li class="nav-item">
                   <a
-                    class="nav-link"
+                    class="nav-link active"
                     id="professional-tab"
                     data-toggle="tab"
                     href="#professional"
@@ -856,7 +856,7 @@
               <div class="rn-nav-content tab-content" id="myTabContents">
                 <!-- Start Single Tab  -->
                 <div
-                  class="tab-pane show active fade single-tab-area"
+                  class="tab-pane  fade single-tab-area"
                   id="education"
                   role="tabpanel"
                   aria-labelledby="education-tab"
@@ -1032,83 +1032,24 @@
 
                 <!-- Start Single Tab  -->
                 <div
-                  class="tab-pane fade"
+                  class="tab-pane show active fade"
                   id="professional"
                   role="tabpanel"
                   aria-labelledby="professional-tab"
                 >
                   <div class="personal-experience-inner mt--40">
                     <div class="row row--40">
+                      
                       <!-- Start Single Progressbar  -->
                       <div class="col-lg-6 col-md-6 col-12">
                         <div class="progress-wrapper">
                           <div class="content">
                             <span class="subtitle">Features</span>
-                            <h4 class="maintitle">Design Skill</h4>
-                            <!-- Start Single Progress Charts -->
-                            <div class="progress-charts">
-                              <h6 class="heading heading-h6">PHOTOSHOT</h6>
-                              <div class="progress">
-                                <div
-                                  class="progress-bar wow fadeInLeft"
-                                  data-wow-duration="0.5s"
-                                  data-wow-delay=".3s"
-                                  role="progressbar"
-                                  style="width: 100%"
-                                  aria-valuenow="85"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                >
-                                  <span class="percent-label">100%</span>
-                                </div>
-                              </div>
-                            </div>
-                            <!-- End Single Progress Charts -->
-
-                            <!-- Start Single Progress Charts -->
-                            <div class="progress-charts">
-                              <h6 class="heading heading-h6">FIGMA</h6>
-                              <div class="progress">
-                                <div
-                                  class="progress-bar wow fadeInLeft"
-                                  data-wow-duration="0.6s"
-                                  data-wow-delay=".4s"
-                                  role="progressbar"
-                                  style="width: 95%"
-                                  aria-valuenow="85"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                >
-                                  <span class="percent-label">95%</span>
-                                </div>
-                              </div>
-                            </div>
-                            <!-- End Single Progress Charts -->
-
-                            <!-- Start Single Progress Charts -->
-                            <div class="progress-charts">
-                              <h6 class="heading heading-h6">ADOBE XD</h6>
-                              <div class="progress">
-                                <div
-                                  class="progress-bar wow fadeInLeft"
-                                  data-wow-duration="0.7s"
-                                  data-wow-delay=".5s"
-                                  role="progressbar"
-                                  style="width: 60%"
-                                  aria-valuenow="85"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                >
-                                  <span class="percent-label">60%</span>
-                                </div>
-                              </div>
-                            </div>
-                            <!-- End Single Progress Charts -->
-
-                            <!-- Start Single Progress Charts -->
-                            <div class="progress-charts">
+                            <h4 class="maintitle">Development Skill</h4>
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
                               <h6 class="heading heading-h6">
-                                ADOBE ILLUSTRATOR
+                                Flutter
                               </h6>
                               <div class="progress">
                                 <div
@@ -1126,10 +1067,9 @@
                               </div>
                             </div>
                             <!-- End Single Progress Charts -->
-
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">DESIGN</h6>
+                              <h6 class="heading heading-h6">React</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
@@ -1146,6 +1086,82 @@
                               </div>
                             </div>
                             <!-- End Single Progress Charts -->
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
+                              <h6 class="heading heading-h6">Scss</h6>
+                              <div class="progress">
+                                <div
+                                  class="progress-bar wow fadeInLeft"
+                                  data-wow-duration="0.9s"
+                                  data-wow-delay=".7s"
+                                  role="progressbar"
+                                  style="width: 90%"
+                                  aria-valuenow="85"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                >
+                                  <span class="percent-label">90%</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Progress Charts -->
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
+                              <h6 class="heading heading-h6">Node js</h6>
+                              <div class="progress">
+                                <div
+                                  class="progress-bar wow fadeInLeft"
+                                  data-wow-duration="0.9s"
+                                  data-wow-delay=".7s"
+                                  role="progressbar"
+                                  style="width: 90%"
+                                  aria-valuenow="85"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                >
+                                  <span class="percent-label">90%</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Progress Charts -->
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
+                              <h6 class="heading heading-h6">Firebase</h6>
+                              <div class="progress">
+                                <div
+                                  class="progress-bar wow fadeInLeft"
+                                  data-wow-duration="0.9s"
+                                  data-wow-delay=".7s"
+                                  role="progressbar"
+                                  style="width: 20%"
+                                  aria-valuenow="85"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                >
+                                  <span class="percent-label">20%</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Progress Charts -->
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
+                              <h6 class="heading heading-h6">api </h6>
+                              <div class="progress">
+                                <div
+                                  class="progress-bar wow fadeInLeft"
+                                  data-wow-duration="0.9s"
+                                  data-wow-delay=".7s"
+                                  role="progressbar"
+                                  style="width: 20%"
+                                  aria-valuenow="85"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                >
+                                  <span class="percent-label">20%</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Progress Charts -->
                           </div>
                         </div>
                       </div>
@@ -1156,10 +1172,10 @@
                         <div class="progress-wrapper">
                           <div class="content">
                             <span class="subtitle">Features</span>
-                            <h4 class="maintitle">Development Skill</h4>
+                            <h4 class="maintitle">Design Skill</h4>
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">HTML</h6>
+                              <h6 class="heading heading-h6">Figma</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
@@ -1179,7 +1195,7 @@
 
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">CSS</h6>
+                              <h6 class="heading heading-h6">XD</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
@@ -1199,7 +1215,7 @@
 
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">JAVASCRIPT</h6>
+                              <h6 class="heading heading-h6">photoshop</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
@@ -1219,7 +1235,7 @@
 
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">SOFTWARE</h6>
+                              <h6 class="heading heading-h6">illustrator</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
@@ -1236,10 +1252,29 @@
                               </div>
                             </div>
                             <!-- End Single Progress Charts -->
-
+                            
+                             <!-- Start Single Progress Charts -->
+                             <div class="progress-charts">
+                              <h6 class="heading heading-h6">canva</h6>
+                              <div class="progress">
+                                <div
+                                  class="progress-bar wow fadeInLeft"
+                                  data-wow-duration="0.9s"
+                                  data-wow-delay=".7s"
+                                  role="progressbar"
+                                  style="width: 70%"
+                                  aria-valuenow="85"
+                                  aria-valuemin="0"
+                                  aria-valuemax="100"
+                                >
+                                  <span class="percent-label">70%</span>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Progress Charts -->
                             <!-- Start Single Progress Charts -->
                             <div class="progress-charts">
-                              <h6 class="heading heading-h6">PLUGIN</h6>
+                              <h6 class="heading heading-h6">Design</h6>
                               <div class="progress">
                                 <div
                                   class="progress-bar wow fadeInLeft"
