change-portfoli-name

--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
                 data-target="#portfolioModal"
                 gitHub="https://github.com/zubairbhuian/hospital"
                 liveLink="https://github.com/zubairbhuian/hospital"
-                dis="lorem"
-                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
+                dis="The hospital app is a mobile application designed to provide patients and healthcare professionals with easy access to health information and medical services. This app can offer features such as appointment scheduling, medication reminders, virtual consultations, medical record access, and health education resources."
+                featured="GetX GoogleMap FireBase Firebase-auth"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -521,7 +521,7 @@
                   <div class="content">
                     <div class="category-info">
                       <div class="category-list">
-                        <a href="javascript:void(0)">Development</a>
+                        <a href="javascript:void(0)">Flutter app</a>
                       </div>
                       <div class="meta">
                         <span
@@ -534,7 +534,7 @@
                     </div>
                     <h4 class="title">
                       <a href="javascript:void(0)"
-                        >The services provide for design
+                        >Hospital 
                         <i class="feather-arrow-up-right"></i
                       ></a>
                     </h4>
@@ -555,10 +555,10 @@
                 class="rn-portfolio"
                 data-toggle="modal"
                 data-target="#portfolioModal"
-                gitHub="https://github.com/zubairbhuian/hospital"
-                liveLink="https://github.com/zubairbhuian/hospital"
-                dis="lorem"
-                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
+                gitHub="https://github.com/zubairbhuian"
+                liveLink="https://github.com/zubairbhuian"
+                dis="Lector can display a variety of information, such as website traffic, pageviews, bounce rates, conversion rates, and revenue. The purpose of Lector is to provide website owners, marketers, and other stakeholders with actionable insights that can help them make informed decisions about website optimization and marketing strategies."
+                featured="html css scss javascript jquery"
               >
                 <div class="inner">
                   <div class="thumbnail">
@@ -572,7 +572,7 @@
                   <div class="content">
                     <div class="category-info">
                       <div class="category-list">
-                        <a href="javascript:void(0)">Application</a>
+                        <a href="javascript:void(0)">Front-end Dev</a>
                       </div>
                       <div class="meta">
                         <span
@@ -585,7 +585,7 @@
                     </div>
                     <h4 class="title">
                       <a href="javascript:void(0)"
-                        >Mobile app landing design & app maintain<i
+                        >Lector Dashboard<i
                           class="feather-arrow-up-right"
                         ></i
                       ></a>
@@ -595,7 +595,56 @@
               </div>
             </div>
             <!-- End Single Portfolio -->
-
+            <!-- Start Single Portfolio -->
+            <div
+              data-aos="fade-up"
+              data-aos-delay="500"
+              data-aos-once="true"
+              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
+            >
+              <div
+                class="rn-portfolio"
+                data-toggle="modal"
+                data-target="#portfolioModal"
+                gitHub="https://github.com/zubairbhuian/hospital"
+                liveLink="https://github.com/zubairbhuian/hospital"
+                dis="lorem"
+                featured="GetX MVP API Integration Node"
+              >
+                <div class="inner">
+                  <div class="thumbnail">
+                    <a href="javascript:void(0)">
+                      <img
+                        src="assets/images/portfolio/portfolio-05.jpg"
+                        alt="Personal Portfolio Images"
+                      />
+                    </a>
+                  </div>
+                  <div class="content">
+                    <div class="category-info">
+                      <div class="category-list">
+                        <a href="javascript:void(0)">Flutter App</a>
+                      </div>
+                      <div class="meta">
+                        <span
+                          ><a href="javascript:void(0)"
+                            ><i class="feather-heart"></i
+                          ></a>
+                          630</span
+                        >
+                      </div>
+                    </div>
+                    <h4 class="title">
+                      <a href="javascript:void(0)"
+                        >Spice Food
+                        <i class="feather-arrow-up-right"></i
+                      ></a>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End Single Portfolio -->
             <!-- Start Single Portfolio -->
             <div
               data-aos="fade-up"
@@ -624,7 +673,7 @@
                   <div class="content">
                     <div class="category-info">
                       <div class="category-list">
-                        <a href="javascript:void(0)">Photoshop</a>
+                        <a href="javascript:void(0)">Font-end Dev</a>
                       </div>
                       <div class="meta">
                         <span
@@ -637,7 +686,7 @@
                     </div>
                     <h4 class="title">
                       <a href="javascript:void(0)"
-                        >Logo design creativity & Application
+                        >DGTV 
                         <i class="feather-arrow-up-right"></i
                       ></a>
                     </h4>
@@ -687,7 +736,7 @@
                     </div>
                     <h4 class="title">
                       <a href="javascript:void(0)"
-                        >Logo design creativity & Application
+                        >Logo 
                         <i class="feather-arrow-up-right"></i
                       ></a>
                     </h4>
@@ -696,56 +745,7 @@
               </div>
             </div>
             <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div
-              data-aos="fade-up"
-              data-aos-delay="500"
-              data-aos-once="true"
-              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30"
-            >
-              <div
-                class="rn-portfolio"
-                data-toggle="modal"
-                data-target="#portfolioModal"
-                gitHub="https://github.com/zubairbhuian/hospital"
-                liveLink="https://github.com/zubairbhuian/hospital"
-                dis="lorem"
-                featured="Athu GetX MVP GoogleMap FireBase Firebase-auth"
-              >
-                <div class="inner">
-                  <div class="thumbnail">
-                    <a href="javascript:void(0)">
-                      <img
-                        src="assets/images/portfolio/portfolio-05.jpg"
-                        alt="Personal Portfolio Images"
-                      />
-                    </a>
-                  </div>
-                  <div class="content">
-                    <div class="category-info">
-                      <div class="category-list">
-                        <a href="javascript:void(0)">Photoshop</a>
-                      </div>
-                      <div class="meta">
-                        <span
-                          ><a href="javascript:void(0)"
-                            ><i class="feather-heart"></i
-                          ></a>
-                          630</span
-                        >
-                      </div>
-                    </div>
-                    <h4 class="title">
-                      <a href="javascript:void(0)"
-                        >Logo design creativity & Application
-                        <i class="feather-arrow-up-right"></i
-                      ></a>
-                    </h4>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- End Single Portfolio -->
+
             <!-- Start Single Portfolio -->
             <div
               data-aos="fade-up"
@@ -787,7 +787,7 @@
                     </div>
                     <h4 class="title">
                       <a href="javascript:void(0)"
-                        >Logo design creativity & Application
+                        >Logo 
                         <i class="feather-arrow-up-right"></i
                       ></a>
                     </h4>
