--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <b class="is-hidden">Web Developer.</b>
                   </span>
                 </span> -->
-                <p class="header-cus-area">I design and code <span>beautifully</span>  simple things, and I love what I do. I use animation as a third dimension by which Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p class="header-cus-area">I am <span>Zubair Bhuiyan</span>, a professional software developer with focus on mobile app development using <span>Flutter</span>. With <span>2 years</span> of experience in this field and an additional <span>4 years</span> of experience in web development, I have a wealth of knowledge to offer. On this website, you will find information about my skills, experience and portfolio, which demonstrate my ability to create innovative, user-friendly and visually appealing applications. <span>Whether you're looking for a talented developer to bring your app idea to life or inspiration for your own project, this is the place.</span></p>
                 <!-- type headline end -->
                 <div class="button-area">
                   <a class="rn-btn mr-4" href="cv-zubair-bhuian.pdf"
@@ -310,9 +310,9 @@
                     <i data-feather="smartphone"></i>
                   </div>
                   <div class="content">
-                    <h4 class="title"><a href="#">Mobile app Development</a></h4>
+                    <h4 class="title"><a href="#">Mobile app <br> Development</a></h4>
                     <p class="description">
-                      
+                      As a Flutter developer, I specialize in developing cross-platform mobile applications for both Android and iOS operating systems. Utilizing the Flutter framework, I create high-quality apps with an intuitive user interface, seamless performance, and robust functionality. With my expertise in Flutter, I can deliver applications that are visually stunning, responsive, and user-friendly. If you're looking to develop a mobile app that stands out in today's competitive market, I am here to help.
                     </p>
                     <a class="read-more-button" href="#"
                       ><i class="feather-arrow-right"></i
@@ -337,10 +337,9 @@
                     <i data-feather="code"></i>
                   </div>
                   <div class="content">
-                    <h4 class="title"><a href="#">Web Development</a></h4>
+                    <h4 class="title"><a href="#">Web app <br> Development</a></h4>
                     <p class="description">
-                      It uses a dictionary of over 200 Latin words, combined
-                      with a handful of model sentence.
+                      As a web developer, I am skilled in utilizing a range of technologies to build dynamic and engaging websites. I have expertise in HTML, CSS, JavaScript, jQuery, SCSS, React, and Bootstrap, enabling me to create websites that are both visually appealing and highly functional. With my knowledge of front-end development and design principles, I ensure that each website I build is optimized for performance, accessibility, and user experience. Whether you need a simple website or a complex web application, I have the skills and expertise to deliver a high-quality product that meets your specific requirements.
                     </p>
                     <a class="read-more-button" href="#"
                       ><i class="feather-arrow-right"></i
@@ -351,89 +350,6 @@
               </div>
             </div>
             <!-- End SIngle Service -->
-            <!-- Start Single Service -->
-            <div
-              data-aos="fade-up"
-              data-aos-duration="500"
-              data-aos-delay="500"
-              data-aos-once="true"
-              class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
-            >
-              <div class="rn-service">
-                <div class="inner">
-                  <div class="icon">
-                    <i data-feather="pen-tool"></i>
-                  </div>
-                  <div class="content">
-                    <h4 class="title"><a href="#">UI/UX</a></h4>
-                    <p class="description">
-                      I throw myself down among the tall grass by the stream as
-                      I lie close to the earth.
-                    </p>
-                    <a class="read-more-button" href="#"
-                      ><i class="feather-arrow-right"></i
-                    ></a>
-                  </div>
-                </div>
-                <a class="over-link" href="#"></a>
-              </div>
-            </div>
-            <!-- End SIngle Service -->
-            <div
-            data-aos="fade-up"
-            data-aos-duration="500"
-            data-aos-delay="100"
-            data-aos-once="true"
-            class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
-          >
-            <div class="rn-service">
-              <div class="inner">
-                <div class="icon">
-                  <i data-feather="mail"></i>
-                </div>
-                <div class="content">
-                  <h4 class="title"><a href="#">Email Template </a></h4>
-                  <p class="description">
-                    I throw myself down among the tall grass by the stream as
-                    I lie close to the earth.
-                  </p>
-                  <a class="read-more-button" href="#"
-                    ><i class="feather-arrow-right"></i
-                  ></a>
-                </div>
-              </div>
-              <a class="over-link" href="#"></a>
-            </div>
-          </div>
-          <!-- End SIngle Service -->
-          <!-- Start Single Service -->
-          <div
-            data-aos="fade-up"
-            data-aos-duration="500"
-            data-aos-delay="300"
-            data-aos-once="true"
-            class="col-lg-6 col-xl-4 col-md-6 col-sm-12 col-12 mt--50 mt_md--30 mt_sm--30"
-          >
-            <div class="rn-service">
-              <div class="inner">
-                <div class="icon">
-                  <i data-feather="wind"></i>
-                </div>
-                <div class="content">
-                  <h4 class="title"><a href="#">Api Integration</a></h4>
-                  <p class="description">
-                    It uses a dictionary of over 200 Latin words, combined
-                    with a handful of model sentence.
-                  </p>
-                  <a class="read-more-button" href="#"
-                    ><i class="feather-arrow-right"></i
-                  ></a>
-                </div>
-              </div>
-              <a class="over-link" href="#"></a>
-            </div>
-          </div>
-          <!-- End SIngle Service -->
           <!-- Start Single Service -->
           <div
             data-aos="fade-up"
@@ -448,10 +364,9 @@
                   <i data-feather="cloud"></i>
                 </div>
                 <div class="content">
-                  <h4 class="title"><a href="#">Backend Development</a></h4>
+                  <h4 class="title"><a href="#">Backend <br> Development</a></h4>
                   <p class="description">
-                    I throw myself down among the tall grass by the stream as
-                    I lie close to the earth.
+                    As a backend developer, I specialize in using Node.js to build robust and scalable web applications. With my expertise in Node.js, I am able to create server-side applications that are both performant and secure. My proficiency in using Node.js modules and libraries enables me to build custom APIs, integrate with databases, and handle data storage and retrieval efficiently. Whether you need to create a RESTful API or a real-time web application, I can help you design and implement a backend solution that meets your needs. With my attention to detail and commitment to quality, I ensure that the backend code I develop is reliable, maintainable, and well-documented.
                   </p>
                   <a class="read-more-button" href="#"
                     ><i class="feather-arrow-right"></i
@@ -805,7 +720,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="section-title text-center">
-                <span class="subtitle">4+ Years of Experience</span>
+                <span class="subtitle">2+4 Years of Experience</span>
                 <h2 class="title">My Skill</h2>
               </div>
             </div>
