add-light-as-def

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" color-theme="dark">
+<html lang="en" color-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -28,7 +28,7 @@
   </head>
 
   <body
-    class="template-color-1 home-sticky spybody"
+    class="template-color-1 home-sticky spybody white-version"
     data-spy="scroll"
     data-target=".navbar-example2"
     data-offset="150"
@@ -1656,8 +1656,8 @@
       <!-- Start Right Demo  -->
       <div class="rn-right-demo">
         <div class="my-color-theme">
-          <div class="there-items dark-theme active"></div>
-          <div class="there-items light-theme"></div>
+          <div class="there-items dark-theme "></div>
+          <div class="there-items light-theme active"></div>
           <div class="there-items blue-theme"></div>
         </div>
       </div>
